# opengl-tut

./: CMakeLists.txt  README.md
res/shaders/: Basic.shader
src/: Application.cpp
